--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   height: 100%;
+  background: #f5f5ff;
 }
 
 .chip {
@@ -21,4 +22,55 @@ html, body, #root {
 .chip.active{
   background-color: black;
   color: #FFFFFF;
+}
+.dashboard {
+  padding: 0px 60px;
+}
+.kpis-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 18px;
+}
+.kpi-card {
+  width: 23%;
+  height: 150px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  background: #FFFFFF;
+  padding: 12px 16px;
+  margin: 22px 4px;
+}
+.kpi-label {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  padding: 4px;
+}
+
+.kpi-value {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 38px;
+  padding: 2px;
+}
+
+.insights {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.card {
+  height: 400px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  background: #FFFFFF;
+  padding: 12px 16px;
+  margin: 22px 4px;
+}
+
+.header {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  background: #FFFFFF;
+  padding: 15px;
 }
